--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.0.0",
+    "@tanstack/react-query": "^5.66.0",
+    "@tanstack/react-query-devtools": "^5.66.0",
+    "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "next": "15.1.6",
     "react": "^19.0.0",
