--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
+    "moment": "^2.30.1",
     "motion": "^12.4.3",
     "next": "15.1.6",
     "react": "^19.0.0",
