--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "emoji-picker-react": "^4.12.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
