--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "moment": "^2.30.1",
     "motion": "^12.4.3",
     "next": "15.1.6",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
