--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.5.2",
     "emoji-picker-react": "^4.12.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
