--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
     "motion": "^12.4.3",
-    "next": "15.1.6",
+    "next": "^15.2.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
