--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-intersection-observer": "^9.16.0",
     "react-resizable-panels": "^2.1.7",
     "socket.io-client": "^4.8.1",
     "sonner": "^1.7.4",
